--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon",
-    "build": "tsc -p ."
+    "build": "tsc -p . && npm run copy-dependencies",
+    "copy-dependencies": "cp -r node_modules dist && cp package.json dist"
   },
   "keywords": [],
   "author": "",
