--- a/.github/workflows/api-deploy.yml
+++ b/.github/workflows/api-deploy.yml
@@ -71,4 +71,4 @@ jobs:
         with:
           app-name: ${{ env.AZURE_WEBAPP_NAME }}
           startup-command: "node index.js"
-          package: ${{ github.workspace }}/api
+          package: ${{ github.workspace }}
